--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@ This is the index page, yay
 
 <p>
 	<% if user_signed_in? %>
-		Welcome back
+		Welcome back, <%= current_user.first_name %>!
 		
 		<%= link_to "Log out", destroy_user_session_path, method: :delete %>
 	<% else %>
