--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,3 +1,14 @@
 <h1>
 	<%= @group.name %>
 </h1>
+
+<h2>Group members:</h2>
+<ul>
+	<% @group.users.each do |user| %>
+		<li>
+			<%= link_to "#{user.first_name} #{user.last_name}", user %>
+		</li>
+	<% end %>
+</ul>
+
+<%= link_to "Delete group", @group, method: :delete, data: { confirm: "Are you sure?"} %>
