add users to groups

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -5,6 +5,13 @@
 		<%= f.text_field :name %>
 	</div>
 	
+	<div class="field">
+		<%= label_tag :users %>
+		<%= text_area_tag :users %>
+	</div>
+	
+<!--TODO: change into 1 per line with + button kinda thing -->
+	
 	<div class="actions">
 		<%= f.submit %>
 	</div>
