--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,12 @@
 	<p class="notice"><%= notice %></p>
 	<p class="alert"><%= alert %></p>
 	
-	<% if user_signed_in? && !current_user.group? %>
-		<%= link_to "Create a group", new_group_path %>
+	<% if user_signed_in? %>
+		<% if current_user.group? %>
+			<%= link_to "Your group", current_user.group %>	
+		<% else %>
+			<%= link_to "Create a group", new_group_path %>
+		<% end %>
 	<% end %>
 	
 	<div class="main">
