--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,4 +11,6 @@
 	<% end %>
 </ul>
 
+<%= link_to "Your task list", tasks_path %>
+
 <%= link_to "Delete group", @group, method: :delete, data: { confirm: "Are you sure?"} %>
