--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,3 +12,9 @@ body {
 .field_with_errors input {
 	border: 2px solid red;
 }
+
+.field {
+	.add-user-field:only-child button {
+		display: none;
+	}
+}
