--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -19,6 +19,11 @@
 		
 		<button type="button" class="add-user-button">Add user field</button>
 	</div>
+	
+	<div class="field">
+		<%= label_tag :add_suggested_tasks %>?
+		<%= check_box_tag :add_suggested_tasks %>
+	</div>
 		
 	<div class="actions">
 		<%= f.submit %>
