adding LOG OUT in general part

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 	
 	<% if user_signed_in? %>
 		<%= link_to "Your profile", current_user %>
+		<%= link_to "Log out", destroy_user_session_path, method: :delete %>
 		<% if current_user.group? %>
 			<%= link_to "Your group", current_user.group %>	
 		<% else %>
