--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,17 +4,17 @@
   <%= devise_error_messages! %>
 	
 	<div class="field">
-		<%= f.label :first_name %>
+		<%= f.label :first_name %>*
 		<%= f.text_field :first_name %>
 	</div>
 	
 	<div class="field">
-		<%= f.label :last_name %>
+		<%= f.label :last_name %>*
 		<%= f.text_field :last_name %>
 	</div>
 	
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>*
     <%= f.email_field :email, autofocus: true %>
   </div>
 	
@@ -33,7 +33,7 @@
 	</div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password %>*
     <% if @validatable %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
@@ -41,7 +41,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation %>*<br/>
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
