profile page: add user's tasks

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,3 +18,25 @@ body {
 		display: none;
 	}
 }
+
+.right {
+	float: right;
+}
+
+.left {
+	float: left;
+}
+
+.wrapper {
+	.profile-information {
+		overflow: hidden;
+		
+		.user-information {
+			width: 50%;
+		}
+	}
+
+	.task-list {
+		width: 80%;
+	}
+}
