--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -3,19 +3,25 @@
 </h1>
 
 <h2>Group members:</h2>
-<ul>
+<ul class="group-member-list">
 	<% @group.users.each do |user| %>
 		<li>
-			
-			<%= link_to "#{user.first_name} #{user.last_name}", user %>
+			<%= image_tag "pp-placeholder.png", alt: "User's profile picture"%> <!--TODO: replase in alt 'Users' by actual name and add it into the link-->
+			<h3><%= link_to "#{user.first_name} #{user.last_name}", user %></h3>
+			<h4>Score: 27</h4><!-- TODO: generate score -->
 		</li>
 	<% end %>
 </ul>
 
-<%= link_to "Add new person", choose_user_path %>
+<div class="">
+	<%= link_to "Add new person", choose_user_path %>
+	<%= link_to "Leave the group", leave_group_path(@group), method: :delete, data: { confirm: "Are you sure?" } %>
+</div>
 
-<%= link_to "Leave the group", leave_group_path(@group), method: :delete, data: { confirm: "Are you sure?" } %>
+<div class="">
+	<%= link_to "Your task list", tasks_path %>
+	<a href="#">See progress graph</a>
+</div>
+<br>
 
-<%= link_to "Your task list", tasks_path %>
-
-<%= link_to "Delete group", @group, method: :delete, data: { confirm: "Are you sure?" } %>
+<%= link_to "Delete group", @group, method: :delete, data: { confirm: "Are you really sure you want to delete this group?" } %>
