--- a/app/views/tasks/add_suggested.html.erb
+++ b/app/views/tasks/add_suggested.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag tasks_add_suggested_path, method: "post" do %>
-	<% [:Vacuum, :Do_the_dishes, :Water_the_flowers].each do |name| %>
+	<% [:Vacuum, :Do_the_dishes, :Water_the_flowers, :Feed_the_pet, :Gather_all_dishes_by_the_sink, :Get_the_mail, :Do_the_laundry, :Iron, :Tidy_up, :Trash, :Prepare_breakfast, :Cook_dinner, :Exchange_dirty_towels, :Clean_the_toilet, :Deblock_the_drains, :Throw_out_bad_food, :Clean_the_sinks, "Clean_the_shower/bathtub", :Dust_all_surfaces, "Wipe_down_handles/doorknobs", :Check_and_stock_up_supplies, :Clean_mirrors, :Clean_windows, "Clean_the_oven/microwave", :Change_bedsheets, :Decalc].each do |name| %>
 		<div class="field">
 			<%= check_box_tag name %>
 			<%= label_tag name %>
@@ -14,6 +14,8 @@
 																							])) %>
 		</div>
 	<% end %>
+	
+	<h2>Make an "Check all" button.</h2>
 	
 	<div class="action">
 		<%= submit_tag "Create tasks" %>
