--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,29 +1,52 @@
 <%= link_to "Add new task", new_task_path %>
+<p class="edit-toggler">Edit</p>
 
 <h2>Big Tasks</h2>
-<h3>Daily</h3>
 
-<% if @tasks["big"] %>
-	<%= render partial: "task_list", locals: { tasks: @tasks["big"]["daily"] } %>
-<h3>Weekly</h3>
-	<%= render partial: "task_list", locals: { tasks: @tasks["big"]["weekly"] } %>
-<h3>Monthly</h3>
-	<%= render partial: "task_list", locals: { tasks: @tasks["big"]["monthly"] } %>
-<% else %>
-	<p>You have no big tasks yet.</p>
-<% end %>
+<div class="row">
+	<div class="column">
+		<% if @tasks["big"] %>
+			<h3>Daily</h3>
+			<%= render partial: "task_list", locals: { tasks: @tasks["big"]["daily"] } %>
+	</div>
+	
+	<div class="column">
+		<h3>Weekly</h3>
+			<%= render partial: "task_list", locals: { tasks: @tasks["big"]["weekly"] } %>
+	</div>
+	
+	<div class="column">
+		<h3>Monthly</h3>
+			<%= render partial: "task_list", locals: { tasks: @tasks["big"]["monthly"] } %>
+	</div>
+	
+	<% else %>
+		<p>You have no big tasks yet.</p>
+	<% end %>
+	</div>
+
 <hr>
 
 <h2>Small Tasks</h2>
 
-<% if @tasks["small"] %>
-<h3>Daily</h3>
-	<%= render partial: "task_list", locals: { tasks: @tasks["small"]["daily"] } %>
-<h3>Weekly</h3>
-	<%= render partial: "task_list", locals: { tasks: @tasks["small"]["weekly"] } %>
-<h3>Monthly</h3>
-	<%= render partial: "task_list", locals: { tasks: @tasks["small"]["monthly"] } %>
+<div class="row">
+	<div class="column">
+		<% if @tasks["small"] %>
+			<h3>Daily</h3>
+			<%= render partial: "task_list", locals: { tasks: @tasks["small"]["daily"] } %>
+	</div>
 	
-<% else %>
-	<p>You have no small tasks yet.</p>
-<% end %>
+	<div class="column">
+		<h3>Weekly</h3>
+			<%= render partial: "task_list", locals: { tasks: @tasks["small"]["weekly"] } %>
+	</div>
+	
+	<div class="column">
+		<h3>Monthly</h3>
+			<%= render partial: "task_list", locals: { tasks: @tasks["small"]["monthly"] } %>
+	</div>
+	
+	<% else %>
+		<p>You have no small tasks yet.</p>
+	<% end %>
+	</div>
