profile layout: user informations and task list display

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -124,6 +124,16 @@ nav {
 	.profile-information {
 		overflow: hidden;
 		
+		.prolile-picture {
+			width: 200px;
+			height: 200px;
+			background-image: url("./pp-placeholder.png");
+			background-size: cover;
+			background-position: center center;
+			margin: 1rem 0;
+			border: 1px solid;
+		}
+		
 		.user-information {
 			width: 50%;
 		}
