--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,3 +1,5 @@
 <%= render "form" %>
 
 <%= link_to "Back", tasks_path %>
+
+<!-- TODO: add profile image upload and write a little something about yourself -->
