--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,56 +4,67 @@
 
 <div class="wrapper">
 	<div class="profile-information">
-		<%= image_tag "pp-placeholder.png", alt: "Your profile picture", class: "left" %>
-
-		<div class="right user-information">
-	Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-
-		<br><br>
+		<div class="left">
+		<div class="prolile-picture"></div>
 		<%= link_to "Edit your profile", edit_user_registration_path %>
 		<%= link_to "Delete user", @user, method: :delete, data: { confirm: "Are you sure?"} %>
+	</div>
+<!--TODO: add thumbnail -->
+
+		<div class="right user-information">
+			<p>Name: <%= current_user.first_name %> <%= current_user.last_name %></p>
+			<p>Birthday: <%= current_user.birthdate.strftime("#{current_user.birthdate.day.ordinalize} %B %Y") %></p>
+			<p>Gender: <%= current_user.gender %></p>
+			<p>About: <br> 
+				Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+			</p>
 		</div>
 	</div>
+	
+	<hr>
+	
 <% if @user == current_user %>
-	<div class="task-list">
-		<h2>Big Tasks</h2>
-		
-		<% if @tasks["big"] %>
-			<% if @tasks["big"]["daily"].present? %>
-				<h3>Daily</h3>
-				<%= render partial: "tasks/task_list", locals: { tasks: @tasks["big"]["daily"] } %>
+<div class="task-wrapper">
+  <div class="left task-list-part">
+    <h2>Big Tasks</h2>
+			<% if @tasks["big"] %>
+				<% if @tasks["big"]["daily"].present? %>
+					<h3>Daily</h3>
+					<%= render partial: "tasks/task_list", locals: { tasks: @tasks["big"]["daily"] } %>
+				<% end %>
+				<% if @tasks["big"]["weekly"].present? %>
+					<h3>Weekly</h3>
+					<%= render partial: "tasks/task_list", locals: { tasks: @tasks["big"]["weekly"] } %>
+				<% end %>
+				<% if @tasks["big"]["monthly"].present? %>
+					<h3>Monthly</h3>
+					<%= render partial: "tasks/task_list", locals: { tasks: @tasks["big"]["monthly"] } %>
+				<% end %>
+			<% else %>
+				<p>You don't have any big tasks.</p>
 			<% end %>
-			<% if @tasks["big"]["weekly"].present? %>
-				<h3>Weekly</h3>
-				<%= render partial: "tasks/task_list", locals: { tasks: @tasks["big"]["weekly"] } %>
+  </div>
+	
+  <div class="right task-list-part">
+    <h2>Small Tasks</h2>
+			<% if @tasks["small"].present? %>
+				<% if @tasks["small"]["daily"].present? %>
+					<h3>Daily</h3>
+					<%= render partial: "tasks/task_list", locals: { tasks: @tasks["small"]["daily"] } %>
+				<% end %>
+				<% if @tasks["small"]["weekly"].present? %>
+					<h3>Weekly</h3>
+					<%= render partial: "tasks/task_list", locals: { tasks: @tasks["small"]["weekly"] } %>
+				<% end %>
+				<% if @tasks["small"]["monthly"].present? %>
+					<h3>Monthly</h3>
+					<%= render partial: "tasks/task_list", locals: { tasks: @tasks["small"]["monthly"] } %>
+				<% end %>
+			<% else %>
+				<p>You don't have any small tasks.</p>
 			<% end %>
-			<% if @tasks["big"]["monthly"].present? %>
-				<h3>Monthly</h3>
-				<%= render partial: "tasks/task_list", locals: { tasks: @tasks["big"]["monthly"] } %>
-			<% end %>
-		<% else %>
-			<p>You don't have any big tasks.</p>
-		<% end %>
-		<hr>
-
-		<h2>Small Tasks</h2>
-		<% if @tasks["small"].present? %>
-			<% if @tasks["small"]["daily"].present? %>
-				<h3>Daily</h3>
-				<%= render partial: "tasks/task_list", locals: { tasks: @tasks["small"]["daily"] } %>
-			<% end %>
-			<% if @tasks["small"]["weekly"].present? %>
-				<h3>Weekly</h3>
-				<%= render partial: "tasks/task_list", locals: { tasks: @tasks["small"]["weekly"] } %>
-			<% end %>
-			<% if @tasks["small"]["monthly"].present? %>
-				<h3>Monthly</h3>
-				<%= render partial: "tasks/task_list", locals: { tasks: @tasks["small"]["monthly"] } %>
-			<% end %>
-		<% else %>
-			<p>You don't have any small tasks.</p>
-		<% end %>
-	</div>
+  </div>
+</div>
 <% end %>
 
-</div>
+<!-- TODO: Get the names away from this list -->
