--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,9 @@ html {
 }
 
 body {
+	background: -webkit-linear-gradient(45deg, rgba(20, 72, 132, .25) 0%,rgba(241, 116, 49, .25) 100%);
+	background: linear-gradient(45deg, rgba(20, 72, 132, .25) 0%,rgba(241, 116, 49, .25) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#144884', endColorstr='#f17431',GradientType=1 );
 	margin: 0;
 //	background: $beige;
 }
@@ -123,6 +126,12 @@ nav {
 .wrapper {
 	.profile-information {
 		overflow: hidden;
+		padding: 1rem;
+		background: #144884;
+		background: -webkit-linear-gradient(45deg, rgba(20, 72, 132, .25) 0%,rgba(241, 116, 49, .25) 100%);
+		background: linear-gradient(45deg, rgba(20, 72, 132, .25) 0%,rgba(241, 116, 49, .25) 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#144884', endColorstr='#f17431',GradientType=1 );
+
 		
 		.prolile-picture {
 			width: 200px;
