--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 </h1>
 
 <div class="wrapper">
-	<div class="profile-information">
+	<div class="profile-information gradient">
 		<div class="left">
 		<div class="prolile-picture"></div>
 		<%= link_to "Edit your profile", edit_user_registration_path %>
