--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Arvo:700|Ubuntu' rel='stylesheet' type='text/css'>
 </head>
 
-<body>
+<body class="gradient">
 	<p class="notice"><%= notice %></p>
 	<p class="alert"><%= alert %></p>
 	
