--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,15 +6,17 @@
 	<div class="profile-information gradient">
 		<div class="left">
 		<div class="prolile-picture"></div>
-		<%= link_to "Edit your profile", edit_user_registration_path %>
-		<%= link_to "Delete user", @user, method: :delete, data: { confirm: "Are you sure?"} %>
+		<% if @user == current_user %>
+			<%= link_to "Edit your profile", edit_user_registration_path %>
+			<%= link_to "Delete user", @user, method: :delete, data: { confirm: "Are you sure?"} %>
+		<% end %>
 	</div>
 <!--TODO: add thumbnail -->
 
 		<div class="right user-information">
-			<p>Name: <%= current_user.first_name %> <%= current_user.last_name %></p>
-			<p>Birthday: <%= current_user.birthdate.strftime("#{current_user.birthdate.day.ordinalize} %B %Y") %></p>
-			<p>Gender: <%= current_user.gender %></p>
+			<p>Name: <%= @user.first_name %> <%= @user.last_name %></p>
+			<p>Birthday: <%= @user.birthdate.strftime("#{current_user.birthdate.day.ordinalize} %B %Y") %></p>
+			<p>Gender: <%= @user.gender %></p>
 			<p>About: <br> 
 				Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 			</p>
