--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="form-wrapper">
+
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -14,7 +16,7 @@
 	</div>
 	
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true %>
   </div>
 	
@@ -26,28 +28,28 @@
 	<div class="field">
 		<%= f.label :gender %>
 		<%= f.select(:gender) do %>
-			<% [['Female', 'female'], ['Male', 'male'], ['Other', 'other']].each do |c| -%>
+			<% [['Other', 'other'], ['Female', 'female'], ['Male', 'male']].each do |c| -%>
 				<%= content_tag(:option, c.first, value: c.last) %>
 			<% end %>
 		<% end %>
 	</div>
-
+	<br>
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password %> <!-- <i>(leave blank if you don't want to change it)</i><br /> -->
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password %> <!-- <i>(we need your current password to confirm your changes)</i> -->
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
@@ -57,3 +59,4 @@
 <% end %>
 
 <%= link_to "Back", :back %>
+</div>
