--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,13 +55,6 @@ nav {
 			
 			a {
 				padding: 5px 10px 5px 40px;
-//				border-right: 1px solid;
-			}
-		}
-		
-		&.right {
-			a {
-//				border-left: 1px solid;
 			}
 		}
 		
@@ -89,6 +82,65 @@ nav {
 	}
 }
 
+.form-wrapper {
+  background-image: -webkit-linear-gradient(45deg, rgba(20, 72, 132, .25) 0%,rgba(241, 116, 49, .25) 100%);
+  background-image: linear-gradient(45deg, rgba(20, 72, 132, .25) 0%,rgba(241, 116, 49, .25) 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  
+  width: 500px;
+  margin: 1rem auto;
+  padding: 1rem;
+  color: $blue;
+    
+  h2 {
+    margin-top: 0;
+    text-align: center;
+  }
+	
+	a {
+		text-align: center;
+		display: block;
+	}
+  
+  .field {
+    width: 350px;
+    margin: 0 auto;
+    position: relative;
+    
+    input, select {
+      position: absolute;
+      right: 0;
+      width: 150px;
+    }
+    
+    select {
+      border-radius: 0;
+    }
+  }
+  
+  .actions {
+    text-align: center;
+    
+    input {
+      padding: .5rem;
+      margin: 1rem 1rem .5rem;
+      background: $blue;
+      color: $beige;
+      font-size: 1rem;
+      font-family: $display-font;
+      border: none;
+      width: 350px;
+    }
+  }
+}
+
+//.new_user {
+//	.checkbox-wrap {
+//		margin-top: 1rem;
+//	}
+//}
+
 .main {
 	width: 80%;
 	margin: 0 auto;
@@ -102,10 +154,14 @@ nav {
 	h1, h2 {
 		font-family: $display-font;
 	}
-	
-// :/ //	h2, h3, h4 {
-//		font-weight: normal !important;
-//	}
+
+	a {
+		color: $orange;
+		
+		&:hover {
+			text-shadow: 0 0 10px $beige;
+		}
+	}
 }
 
 .field_with_errors input {
@@ -132,6 +188,10 @@ nav {
 	.profile-information {
 		overflow: hidden;
 		padding: 1rem;
+		
+		.user-edit {
+			margin-left: 1rem;
+		}
 		
 		.prolile-picture {
 			width: 200px;
