--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,20 +1,21 @@
+<div class="form-wrapper">
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "gradient") do |f| %>
   <%= devise_error_messages! %>
 	
 	<div class="field">
-		<%= f.label :first_name %>*
+		<%= f.label :first_name %> *
 		<%= f.text_field :first_name %>
 	</div>
 	
 	<div class="field">
-		<%= f.label :last_name %>*
+		<%= f.label :last_name %> *
 		<%= f.text_field :last_name %>
 	</div>
 	
   <div class="field">
-    <%= f.label :email %>*
+    <%= f.label :email %> *
     <%= f.email_field :email, autofocus: true %>
   </div>
 	
@@ -26,22 +27,22 @@
 	<div class="field">
 		<%= f.label :gender %>
 		<%= f.select(:gender) do %>
-			<% [['?', '?'], ['Female', 'female'], ['Male', 'male'], ['Other', 'other']].each do |c| -%>
+			<% [['Other', 'other'], ['Female', 'female'], ['Male', 'male']].each do |c| -%>
 				<%= content_tag(:option, c.first, value: c.last) %>
 			<% end %>
 		<% end %>
 	</div>
 
   <div class="field">
-    <%= f.label :password %>*
+    <%= f.label :password %> *
     <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <!-- <i>(<%= @minimum_password_length %> characters minimum)</i>
+    <% end %><br/> -->
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %>*<br/>
+    <%= f.label :password_confirmation %> *<!-- <br/> -->
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
@@ -51,3 +52,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
