--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,7 @@
+<div class="form-wrapper">
+	<h2>Update this task</h2>
 <%= render "form" %>
 
 <%= link_to "Back", tasks_path %>
-
+</div>
 <!-- TODO: add profile image upload and write a little something about yourself -->
