--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,6 @@
-<%= render "form" %>
+<div class="form-wrapper">
+	<h2>Add a new task</h2>
+	<%= render "form" %>
 
 <%= link_to "Back", tasks_path %>
+</div>
