suggested tasks: styling and 'check all' button

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -133,13 +133,15 @@ nav {
       width: 350px;
     }
   }
+	
+	table {
+		margin: 0 auto;
+	}
+	
+	#Check_all {
+		margin-left: 2.55rem;
+	}
 }
-
-//.new_user {
-//	.checkbox-wrap {
-//		margin-top: 1rem;
-//	}
-//}
 
 .main {
 	width: 80%;
