--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,17 +42,10 @@
 	</div>
 	
 	<footer class="row">
-		<p class="column">
-			<a href="#">Contact us!</a><br>
-			Send feedback, report bugs, give new ideas, complain about all this s**t here. It's all welcome!
-		</p>
-		<p class="column">
-			<a href="#">Need help?</a><br>
-			Check out the FAQ or simply pass a message!
-		</p>
-		<p class="column"><a href="#">Want to donate?</a><br>
-			&copy; Marie Crabit | 2015
-		</p>	
+		<div>
+			<p>Final project | <i>Multimedia Design &amp; Communication '15</i></p>
+			<p>&copy; Marie Crabit | 2015</p>
+		</div>
 </footer>
 </body>
 </html>
